@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* deprecated Pattern.annotationField
 * rename CopeTest.getProperties() to getConnectProperties()
 	deprecated version is provided
 * added CompositeField.getValueClass()
